--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Odoo.com webbuilder header & footer</title>
 </head>
 <body>
-  
+  <div id="footer">
+    <section>
+      <div>
+        <div>
+          
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
