--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Odoo.com webbuilder header & footer</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div id="footer">
     <section>
       <div>
         <div>
-          
+          <ul>
+            <li><a href="https://www.okchem.com/companyinfo/aboutus">About OKCHEM</a></li>
+            <li><a href="https://www.okchem.com/companyinfo/aboutus">Terms of Service</a></li>
+            <li><a href="https://www.okchem.com/companyinfo/aboutus">Privacy Policy</a></li>
+            <li><a href="https://www.okchem.com/companyinfo/aboutus">Buyer's Guide</a></li>
+            <li><a href="https://www.okchem.com/companyinfo/aboutus">Supplier's Guide</a></li>
+            <li><a href="https://www.okchem.com/companyinfo/aboutus">Contact Us</a></li>
+            <li><a href="https://www.okchem.com/companyinfo/aboutus">中国站</a></li>
+          </ul>
         </div>
       </div>
     </section>
